--- a/style5.css
+++ b/style5.css
@@ -51,10 +51,10 @@
 #container #content {
   display: -ms-grid;
   display: grid;
-  min-height: 80vh;
+  min-height: 75vh;
   width: 95%;
   margin-left: 2.5%;
-  row-gap: 3vh;
+  row-gap: 4vh;
 }
 
 #container #content #content-1 {
@@ -64,56 +64,84 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  row-gap: 3vh;
-  height: 40vh;
+  row-gap: 4vh;
+  height: 34vh;
 }
 
-#container #content #content-1 #content-h3tag1 {
-  top: 10vh;
+#container #content #content-1 #content-h4tag1 {
+  color: #8c6349;
   font-size: xx-large;
-  color: #333;
   font-family: 'Crimson Text', serif;
+}
+
+#container #content #content-1 #content-h5tag1 {
+  text-align: center;
+  color: #333;
+  width: 80%;
 }
 
 #container #content #content-1 #hrtag-one, #container #content #content-1 #hrtag-two {
-  width: 70%;
-}
-
-#container #content #content-1 h4 {
-  color: #8c6349;
-  font-family: 'Crimson Text', serif;
-  font-size: large;
-}
-
-#container #content #content-1 #ptag-one, #container #content #content-1 #ptag-one, #container #content #content-1 #ptag-one {
-  color: #333;
+  width: 90%;
 }
 
 #container #content #content-2 {
+  min-height: 33vh;
   display: -ms-grid;
   display: grid;
+  -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+#container #content #content-2 #content2-1 h5, #container #content #content-2 #content2-2 h5 {
+  color: #333;
+}
+
+#container #content #content-2 #content2-1 h5 a, #container #content #content-2 #content2-2 h5 a {
+  text-decoration: none;
+  margin-left: 2vw;
+  color: black;
+}
+
+#container #content #content-2 #content2-3 h4 a {
+  text-decoration: none;
+  color: #333;
+}
+
+#container #content #content-3 {
+  min-height: 90vh;
+}
+
+#container #content #content-3 h4 {
+  color: #8c6349;
+  font-size: xx-large;
+  font-family: 'Crimson Text', serif;
+  text-align: center;
+}
+
+#container #content #content-3 #content3-1 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 40vh;
+  row-gap: 2vh;
+  min-height: 280vh;
 }
 
-#container #content #content-2 h4 {
-  text-align: center;
-  color: #8c6349;
-  font-family: 'Crimson Text', serif;
-  font-size: large;
-}
-
-#container #content #content-2 iframe {
-  width: 100%;
-  height: 35vh;
+#container #content #content-3 #content3-1 img {
+  width: 140px;
+  height: 137px;
+  border: 2px solid #333;
+  -webkit-box-shadow: 5px 5px 7px grey;
+          box-shadow: 5px 5px 7px grey;
 }
 
 #container #footer {
   width: 100%;
-  min-height: 12vh;
+  min-height: 5vh;
   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
   display: -ms-grid;
   display: grid;
@@ -149,25 +177,50 @@
     padding: 5px;
     font-size: medium;
   }
-  #container #content #content-1 #content-h3tag1 {
+  #container #content {
+    min-height: 300vh;
+    width: 95%;
+    row-gap: 3vh;
+  }
+  #container #content #content-1 {
+    row-gap: 4vh;
+    min-height: 50vh;
+  }
+  #container #content #content-1 #content-h4tag1 {
     font-size: 3em;
   }
-  #container #content #content-1 #hrtag-one, #container #content #content-1 #hrtag-two {
-    width: 70%;
-    height: 1%;
-  }
-  #container #content #content-1 h4 {
-    font-size: 2em;
-  }
-  #container #content #content-1 #ptag-one, #container #content #content-1 #ptag-two, #container #content #content-1 #ptag-three {
-    color: #333;
+  #container #content #content-1 #content-h5tag1 {
     font-size: x-large;
   }
-  #container #content #content-2 h4 {
-    font-size: 2em;
+  #container #content #content-1 #hrtag-one, #container #content #content-1 #hrtag-two {
+    width: 90%;
+  }
+  #container #content #content-2 {
+    -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    font-size: x-large;
+  }
+  #container #content #content-2 #content2-2 {
+    margin-left: 20vw;
+  }
+  #container #content #content-3 {
+    min-height: 90vh;
+  }
+  #container #content #content-3 h4 {
+    font-size: 3em;
+  }
+  #container #content #content-3 #content3-1 {
+    -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    row-gap: 2vh;
+    min-height: 200vh;
+  }
+  #container #content #content-3 #content3-1 img {
+    width: 280px;
+    height: 280px;
   }
   #container #footer {
-    font-size: large;
+    font-size: x-large;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -202,33 +255,55 @@
     background-color: crimson;
   }
   #container #content {
-    min-height: 130vh;
-    row-gap: 10vh;
+    width: 95%;
+    row-gap: 4vh;
+    min-height: 100vh;
   }
   #container #content #content-1 {
-    min-height: 65vh;
+    row-gap: 4vh;
+    height: 34vh;
   }
-  #container #content #content-1 #content-h3tag1 {
+  #container #content #content-1 #content-h4tag1 {
     font-size: 3em;
   }
-  #container #content #content-1 #hrtag-one, #container #content #content-1 #hrtag-two {
-    width: 50%;
-  }
-  #container #content #content-1 h4 {
-    font-size: xx-large;
-  }
-  #container #content #content-1 #ptag-one, #container #content #content-1 #ptag-one, #container #content #content-1 #ptag-one {
+  #container #content #content-1 #content-h5tag1 {
     font-size: x-large;
   }
+  #container #content #content-1 #hrtag-one, #container #content #content-1 #hrtag-two {
+    width: 90%;
+  }
   #container #content #content-2 {
-    min-height: 65vh;
+    -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    font-size: x-large;
   }
-  #container #content #content-2 h4 {
-    font-size: xx-large;
+  #container #content #content-2 #content2-2 {
+    margin-left: 13vw;
   }
-  #container #content #content-2 iframe {
-    width: 75%;
-    height: 60vh;
+  #container #content #content-2 #content2-3 {
+    margin-left: 10vw;
+  }
+  #container #content #content-3 {
+    min-height: 70vh;
+  }
+  #container #content #content-3 h4 {
+    font-size: 3em;
+  }
+  #container #content #content-3 #content3-1 {
+    -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    row-gap: 2vh;
+    min-height: 100vh;
+  }
+  #container #content #content-3 #content3-1 img {
+    width: 270px;
+    height: 270px;
+    -webkit-transition: all 0.25s ease-in-out;
+    transition: all 0.25s ease-in-out;
+  }
+  #container #content #content-3 #content3-1 img:hover {
+    width: 300px;
+    height: 300px;
   }
   #container #footer {
     justify-items: normal;
@@ -243,4 +318,4 @@
     height: 32px;
   }
 }
-/*# sourceMappingURL=style4.css.map */
+/*# sourceMappingURL=style5.css.map */
