--- a/style5.scss
+++ b/style5.scss
@@ -45,66 +45,94 @@
     }
     #content {
         display: grid;
-        min-height: 80vh;
+        min-height: 75vh;
         width: 95%;
         margin-left: 2.5%;
-        row-gap: 3vh;
+        row-gap: 4vh;
         #content-1 {
             display: grid;
             justify-items: center;
             align-items: center;
-            row-gap: 3vh;
-            height: 40vh;
-            #content-h3tag1 {
-                top:10vh;
-                font-size: xx-large;
-                color:#333;
+            row-gap: 4vh;
+            height: 34vh;
+            #content-h4tag1 {
+                color: #8c6349;
+                font-size:xx-large ;
                 font-family: 'Crimson Text', serif; 
 
+
+            }
+            #content-h5tag1 {
+                text-align: center;
+                color:#333;
+                width:80%;
             }
             #hrtag-one, #hrtag-two {
-                width:70%;
-            }
-            h4 {
-                color: #8c6349;
-                font-family: 'Crimson Text', serif; 
-                font-size:large ;
-            }
-            #ptag-one,#ptag-one,#ptag-one {
-                color:#333;
-
+                width:90%;
             }
         }
         #content-2 {
+           min-height: 33vh;
             display: grid;
-            justify-items: center;
-            align-items: center;
-            height: 40vh;
+            grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+            #content2-1,#content2-2 {
+                h5 {
+                    color: #333;
+                    a {
+                        text-decoration: none;
+                        margin-left: 2vw;
+                        color: black;
+                    }
 
+                   
+                }
+            }
+            #content2-3 {
+                h4 {
+                    a {
+                        text-decoration: none;
+                        color:#333;
+                    }
+                }
+            }
+
+        }
+        #content-3 {
+           min-height:90vh;
+            
             h4 {
-                text-align: center;
                 color: #8c6349;
+                font-size:xx-large ;
                 font-family: 'Crimson Text', serif; 
-                font-size:large ;
-
+                text-align: center;
 
             }
-            iframe {
-                width:100%;
-                height: 35vh;;
+            #content3-1 {
+                display: grid;
+                grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+                justify-items: center;
+                align-items: center;
+                row-gap: 2vh;
+                min-height: 280vh;
+                img {
+                    width:140px;
+                    height: 137px;
+                    border: 2px solid #333;
+                    box-shadow: 5px 5px 7px grey;
+                    
+                }
             }
         }
     }
     #footer {
         width:100%;
-        min-height: 12vh;
+        min-height: 5vh;
         background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
         display: grid;
         grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
     }
     @media only screen and(min-width:600px)
     {
-        
         #header{
             height:25vh;
             h3 {
@@ -129,37 +157,51 @@
             }
         }
         #content {
-            
+            min-height: 300vh;
+            width: 95%;
+            row-gap: 3vh;
             #content-1 {
-                
-                #content-h3tag1 {
-                   
-                    font-size: 3em;
+                row-gap: 4vh;
+                min-height: 50vh;
+                #content-h4tag1 {
+                    font-size:3em ;
+                 }
+                #content-h5tag1 {
+                                        
+                    font-size:x-large;
                 }
                 #hrtag-one, #hrtag-two {
-                    width:70%;
-                    height: 1%;
-                }
-                h4 {
-                    font-size:2em;
-                }
-                #ptag-one,#ptag-two,#ptag-three {
-                    color:#333;
-                    font-size: x-large;
-
+                    width:90%;
                 }
             }
             #content-2 {
-                h4 {
-                    
-                    font-size:2em ;
+                grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+                font-size:x-large;
+                #content2-2 {
+                    margin-left: 20vw;
                 }
-
+    
+            }
+            #content-3 {
+                min-height: 90vh;
+                
+                h4 {
+                    font-size:3em ;
+    
+                }
+                #content3-1 {
+                    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+                    row-gap: 2vh;
+                     min-height: 200vh;
+                    img {
+                        width: 280px;
+                        height: 280px;
+                    }
+                }
             }
         }
-
         #footer {
-            font-size: large;
+            font-size:x-large;
             align-items: center;
             justify-items: center;
             height: 10vh;
@@ -174,9 +216,7 @@
             }
 
         }
-
     }
-
     @media only screen and(min-width:1020px)
     {
         #header {
@@ -196,48 +236,57 @@
             }
         }
         #content {
-            min-height: 130vh;
-            row-gap: 10vh;
+            width: 95%;
+            row-gap: 4vh;
+            min-height: 100vh;
             #content-1 {
-                min-height: 65vh;
-                #content-h3tag1 {
-                   
-                    font-size: 3em;
-                   
-    
+                row-gap: 4vh;
+                height: 34vh;
+                #content-h4tag1 {
+                    font-size:3em ;
+                 }
+                #content-h5tag1 {
+                                        
+                    font-size: x-large;
                 }
                 #hrtag-one, #hrtag-two {
-                    width:50%;
-                }
-                h4 {
-                    
-                    font-size:xx-large ;
-                }
-                #ptag-one,#ptag-one,#ptag-one {
-                    font-size: x-large;
-                    
-    
+                    width:90%;
                 }
             }
             #content-2 {
-                min-height: 65vh;
+                grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+                font-size:x-large;
+                #content2-2 {
+                    margin-left: 13vw;
+                }
+                #content2-3{
+                    margin-left: 10vw;
+                }
     
-                h4 { 
-                    font-size:xx-large ;
-    
+            }
+            #content-3 {
+                min-height:70vh;
+                
+                h4 {
+                    font-size:3em ;
     
                 }
-                iframe {
-                    width:75%;
-                    height: 60vh;;
+                #content3-1 {
+                    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+                    row-gap: 2vh;
+                    min-height: 100vh;
+                    img {
+                        width:270px;
+                        height: 270px;
+                        transition: all 0.25s ease-in-out;
+                    &:hover {
+                        width:300px;
+                        height: 300px;
+                    }
+                    }
                 }
             }
         }
-
-        
-
-
-
         #footer {
             justify-items: normal;
             #footerdiv-one {
