--- a/style.css
+++ b/style.css
@@ -10,9 +10,87 @@
   background-image: url(https://www.lefthudson.com/wp-content/uploads/2019/11/white-background-wallpaper-awesome-white-wallpapers-in-hd-barbaras-hd-wallpapers-ideas-of-white-background-wallpaper.jpg);
 }
 
+#container #mobile-header {
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: 2fr 4fr 2fr;
+      grid-template-columns: 2fr 4fr 2fr;
+  min-height: 19vh;
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
+}
+
+#container #mobile-header #mobile-logo img {
+  width: 70%;
+}
+
+#container #mobile-header #mobile-spacer h3 {
+  font-size: x-large;
+  font-family: 'Crimson Text', serif;
+}
+
+#container #mobile-header #hamburger-menu #mobile-checkbox {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  opacity: 0;
+  z-index: 5;
+}
+
+#container #mobile-header #hamburger-menu #mobile-checkbox:checked ~ #mobile-header-menu {
+  top: 0;
+  opacity: 1;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+#container #mobile-header #hamburger-menu #hamburger-container {
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 50px;
+  height: 50px;
+  z-index: 4;
+  position: relative;
+}
+
+#container #mobile-header #hamburger-menu #hamburger-container .hamburger-line {
+  width: 30px;
+  height: 4px;
+  background-color: black;
+}
+
+#container #mobile-header #hamburger-menu #mobile-header-menu {
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  position: absolute;
+  width: 100%;
+  background-color: burlywood;
+  display: -ms-grid;
+  display: grid;
+  top: -19vh;
+  opacity: 0;
+  left: 0;
+  min-height: 19vh;
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
+}
+
+#container #mobile-header #hamburger-menu #mobile-header-menu a {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+}
+
 #container #header {
   display: -ms-grid;
   display: grid;
+  display: none;
   -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   width: 100%;
@@ -130,6 +208,9 @@
 }
 
 @media only screen and (min-width: 600px) {
+  #container #mobile-header {
+    display: none;
+  }
   #container #header {
     height: 25vh;
     display: -ms-grid;
@@ -159,6 +240,9 @@
   }
   #container #content {
     min-height: 75vh;
+  }
+  #container #content #content-1 {
+    display: none;
   }
   #container #content #content-one {
     position: relative;
@@ -208,6 +292,12 @@
 }
 
 @media only screen and (min-width: 1020px) {
+  #container #mobile-header {
+    display: none;
+  }
+  #container #content-1 {
+    display: none;
+  }
   #container #header {
     display: -ms-grid;
     display: grid;
@@ -373,30 +463,17 @@
   #container #content #content-two #contenttwo-two #contenttwo-h3tagtwo #contenttwo-atagone:hover {
     background-color: crimson;
   }
-  #container #footer #footerh5-one {
-    left: 1vw;
+  #container #footer {
+    justify-items: normal;
   }
-  #container #footer #footerh5-two {
-    left: 80vw;
-  }
-  #container #footer #footerdiv-one a {
-    position: relative;
-  }
-  #container #footer #footerdiv-one a p {
-    position: absolute;
-    top: 1vh;
-    opacity: 0;
-    -webkit-box-shadow: 0px 0px 0px grey;
-            box-shadow: 0px 0px 0px grey;
-    z-index: 2;
-  }
-  #container #footer #footerdiv-one a img:hover + p {
-    opacity: 1;
-    top: 0;
+  #container #footer #footerdiv-one a img {
+    width: 8%;
     -webkit-transition: all 0.25s ease-in-out;
     transition: all 0.25s ease-in-out;
-    background-color: white;
-    color: black;
+  }
+  #container #footer #footerdiv-one a img:hover {
+    width: 32px;
+    height: 32px;
   }
 }
 /*# sourceMappingURL=style.css.map */
