--- a/style.scss
+++ b/style.scss
@@ -6,9 +6,78 @@
     display:grid;
     row-gap: 2vh;
     background-image: url(https://www.lefthudson.com/wp-content/uploads/2019/11/white-background-wallpaper-awesome-white-wallpapers-in-hd-barbaras-hd-wallpapers-ideas-of-white-background-wallpaper.jpg);
-  
-   #header {
+    #mobile-header {
         display: grid;
+        justify-items: center;
+        align-items: center;
+        grid-template-columns: 2fr 4fr 2fr;
+        min-height: 19vh;
+        background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
+        #mobile-logo {
+            img {
+                width: 70%;
+            }
+        }
+        #mobile-spacer {
+            h3 {
+                font-size: x-large;
+                font-family: 'Crimson Text', serif; 
+
+            }
+        }
+        #hamburger-menu {
+            #mobile-checkbox {
+                width: 50px;
+                height: 50px;
+                position: absolute;
+                opacity: 0;
+                z-index: 5;
+            }
+            #mobile-checkbox:checked ~ #mobile-header-menu {
+                top: 0;
+                opacity: 1;
+                transition: all 0.5s ease-in-out;
+            }
+            #hamburger-container {
+                display: grid;
+                justify-items: center;
+                align-items: center;
+                width: 50px;
+                height: 50px;
+                z-index: 4;
+                position: relative;
+                .hamburger-line {
+                    width: 30px;
+                    height: 4px;
+                    background-color: black;
+                }
+            }
+            #mobile-header-menu {
+                transition: all 0.5s ease-in-out;
+                position: absolute;
+                width: 100%;
+                background-color: burlywood;
+                display: grid;
+                top:-19vh;
+                opacity: 0;
+                left: 0;
+                min-height: 19vh;
+                background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
+                a {
+                    color:black;
+                    text-decoration: none;
+                    font-weight: bold;
+
+                }
+            }
+
+        }
+    }
+   
+    #header {
+       
+        display: grid;
+        display: none;
         grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
         width: 100%;
         height:20vh;
@@ -127,6 +196,9 @@
     }
     @media only screen and(min-width:600px)
     {
+        #mobile-header {
+            display: none;
+        }
         #header{
             height:25vh;
             h3 {
@@ -151,6 +223,10 @@
             }
         }
             #content {
+                #content-1 {
+                    display: none;
+
+                }
                 min-height: 75vh;
                 
                 #content-one {
@@ -209,242 +285,230 @@
             }
         }
     @media only screen  and(min-width:1020px){
-       
-            
-            #header {
-                display: grid;
-                grid-template-columns: repeat(auto-fit,minmax(90px,1fr));
-                align-items: center;
-                justify-items: center;
-                width: 100%;
-              
-                h3 {
-                    display: none;
-                    
-                    
-                     #pizza-logo {
-                     position: absolute;
-                       left:0;
-                       top:4vh;
-                         
-                     }
+        #mobile-header {
+            display: none;
+        }
+        #content-1 {
+            display: none;
+
+        }
+        #header {
+            display: grid;
+            grid-template-columns: repeat(auto-fit,minmax(90px,1fr));
+            align-items: center;
+            justify-items: center;
+            width: 100%;
+          
+            h3 {
+                display: none;
+                
+                
+                 #pizza-logo {
+                 position: absolute;
+                   left:0;
+                   top:4vh;
                      
-                }
-                #pizza-logo-two {
-                    display: block;
-                    width:30%;
-                }
-                a {
-                    font-size: large;
-                    color: white;
-                    text-decoration: none;
-                    background-color: darkred;
-                    padding: 1vh;
-                    transition: all 0.25s ease-in-out;
-                    &:hover {
-                        background-color: crimson;
-                    }
-                }
-              
+                 }
+                 
             }
-            
-            
-            #content {
-               
-                grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-                width: 99%;
-               
-                #content-one {
-                    display: none;
-
-
-                }
-                #content-two {
-                    min-height: 170vh;
-
-                    display: block;
-                    position: relative;
-                    h1 {
-                        position: absolute;
-                        top:15vh;
-                        left:10vw;
-                        color: #333;
-                        font-family:"adobe-caslon-pro",serif;
-                        font-style: normal;
-                        font-size: 3em;
-
-                    }
-                    h4 {
-                        position:absolute;
-                        top:26vh ;
-                        left: 14vw;
-                        color: #333;
-                        font-family:"adobe-caslon-pro",serif;
-                        font-size: 1em;
-                        font-style: italic;
-
-
-                    }
-                    .condenttwoimages{
-                        position: absolute;
-                        border: 3px solid black;
-                        width: 275px;
-                        height: 183px;
-
-                    }
-                    #contenttwo-imageone {
-                       
-                        left: 44vw;
-                        top:8vh;
-
-                    }
-                    #contenttwo-imagetwo{
-                        
-                        left: 69vw;
-                        top:8vh;
-                       
-
-                    }
-                    #contenttwo-imagethree{
-                      
-                        left: 44vw;
-                        top:38vh;
-                        
-
-                    }
-                    #contenttwo-imagefour{
-                        
-                        left: 69vw;
-                        top:38vh;
-                        
-
-                    }
-                    #hrtag-one {
-                        border-color: #8c6349;
-                        position: absolute;
-                        top: 40vh;
-                        left:3vw;
-                        width:37%;
-                    }
-                    #hrtag-two {
-                        border-color: #8c6349;
-                        position: absolute;
-                        top: 65vh;
-                        left:3vw;
-                        width:37%;
-                    }
-                    #contenttwo-ptagone {
-                        position: absolute;
-                        top: 47vh;
-                        left: 3vw;
-                        font-size: large;
-                        color:#8c6349 ;
-                        text-align: center;
-                        font-weight: bold;
-                        
-                    }
-                    #contenttwo-two {
-                        width: 100%;
-                        top:80vh;
-                        height: 36vh;
-                        left: 0.25vw;
-                      
-                        position: absolute;
-                        #contenttwo-imagefive {
-                            position: absolute;
-                            top: 0;
-                            height: 35vh;
-                            width: 40%;
-                            border: 5px double black;
-
-                            
-                        }
-                        #contenttwo-h3tagone{
-                            color: #333; 
-                            position: absolute;
-                            left:47%;
-                            font-style: oblique;
-                            font-weight: bolder;
-                            top:15vh;
-                            #contenttwo-atagone {
-                                color: goldenrod;
-                            }
-                        }
-                        #contenttwo-imagesix {
-                            position: absolute;
-                            top: 43vh;
-                            height: 35vh;
-                            width: 40%;
-                            border: 5px double black;
-                            left: 55%;
-
-                            
-                        }
-                        #contenttwo-h3tagtwo {
-                            position: absolute;
-                            left: 5vw;
-                            top:60vh ;
-                            color: #333; 
-                            font-style: oblique;
-                            font-weight: bolder;
-                            #contenttwo-atagone {
-                                position: absolute;
-                                left: 7vw;
-                                color:white;
-                                background-color:darkred;
-                                padding: 3vh;
-                                text-decoration: none;
-                                transition: all 0.25s ease-in-out;
-                                &:hover {
-                                    background-color: crimson;
-                                }
-                            }
-                        }
-                    }
-                    
-                    
-
-
-                }
-                
-               
+            #pizza-logo-two {
+                display: block;
+                width:30%;
             }
-            #footer {
-                
-                #footerh5-one{
-                  
-                    left:1vw;
+            a {
+                font-size: large;
+                color: white;
+                text-decoration: none;
+                background-color: darkred;
+                padding: 1vh;
+                transition: all 0.25s ease-in-out;
+                &:hover {
+                    background-color: crimson;
                 }
-                #footerh5-two {
-                  
-                    left:80vw;
+            }
+          
+        }
+        #content {
+           
+            grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+            width: 99%;
+           
+            #content-one {
+                display: none;
+
+
+            }
+            #content-two {
+                min-height: 170vh;
+
+                display: block;
+                position: relative;
+                h1 {
+                    position: absolute;
+                    top:15vh;
+                    left:10vw;
+                    color: #333;
+                    font-family:"adobe-caslon-pro",serif;
+                    font-style: normal;
+                    font-size: 3em;
+
                 }
-                #footerdiv-one {
+                h4 {
+                    position:absolute;
+                    top:26vh ;
+                    left: 14vw;
+                    color: #333;
+                    font-family:"adobe-caslon-pro",serif;
+                    font-size: 1em;
+                    font-style: italic;
+
+
+                }
+                .condenttwoimages{
+                    position: absolute;
+                    border: 3px solid black;
+                    width: 275px;
+                    height: 183px;
+
+                }
+                #contenttwo-imageone {
                    
-                    a {
-                        position: relative;
-                       p {
-                           position: absolute;
-                           top:1vh;
-                           opacity: 0;
-                           box-shadow: 0px 0px 0px grey;
-                          
-                           z-index: 2;
-                           
-                       }
-                       img:hover+p {
-                           opacity: 1;
-                           top: 0;
-                           transition: all 0.25s ease-in-out;
-                          
-                           background-color: white;
-                           color: black;
-                        }
+                    left: 44vw;
+                    top:8vh;
 
+                }
+                #contenttwo-imagetwo{
+                    
+                    left: 69vw;
+                    top:8vh;
+                   
+
+                }
+                #contenttwo-imagethree{
+                  
+                    left: 44vw;
+                    top:38vh;
+                    
+
+                }
+                #contenttwo-imagefour{
+                    
+                    left: 69vw;
+                    top:38vh;
+                    
+
+                }
+                #hrtag-one {
+                    border-color: #8c6349;
+                    position: absolute;
+                    top: 40vh;
+                    left:3vw;
+                    width:37%;
+                }
+                #hrtag-two {
+                    border-color: #8c6349;
+                    position: absolute;
+                    top: 65vh;
+                    left:3vw;
+                    width:37%;
+                }
+                #contenttwo-ptagone {
+                    position: absolute;
+                    top: 47vh;
+                    left: 3vw;
+                    font-size: large;
+                    color:#8c6349 ;
+                    text-align: center;
+                    font-weight: bold;
+                    
+                }
+                #contenttwo-two {
+                    width: 100%;
+                    top:80vh;
+                    height: 36vh;
+                    left: 0.25vw;
+                  
+                    position: absolute;
+                    #contenttwo-imagefive {
+                        position: absolute;
+                        top: 0;
+                        height: 35vh;
+                        width: 40%;
+                        border: 5px double black;
+
+                        
+                    }
+                    #contenttwo-h3tagone{
+                        color: #333; 
+                        position: absolute;
+                        left:47%;
+                        font-style: oblique;
+                        font-weight: bolder;
+                        top:15vh;
+                        #contenttwo-atagone {
+                            color: goldenrod;
+                        }
+                    }
+                    #contenttwo-imagesix {
+                        position: absolute;
+                        top: 43vh;
+                        height: 35vh;
+                        width: 40%;
+                        border: 5px double black;
+                        left: 55%;
+
+                        
+                    }
+                    #contenttwo-h3tagtwo {
+                        position: absolute;
+                        left: 5vw;
+                        top:60vh ;
+                        color: #333; 
+                        font-style: oblique;
+                        font-weight: bolder;
+                        #contenttwo-atagone {
+                            position: absolute;
+                            left: 7vw;
+                            color:white;
+                            background-color:darkred;
+                            padding: 3vh;
+                            text-decoration: none;
+                            transition: all 0.25s ease-in-out;
+                            &:hover {
+                                background-color: crimson;
+                            }
+                        }
                     }
                 }
                 
+                
+
+
             }
+            
+           
+        }
+        #footer {
+            justify-items: normal;
+            #footerdiv-one {
+                a {
+                    img {
+                        width: 8%;
+                        transition: all 0.25s ease-in-out;
+                        &:hover {
+                            width: 32px;
+                            height: 32px;
+                        }
+                    }
+                }
+            }
+                
+        } 
+           
+        
+        
+       
+       
 
         
     }
