--- a/style4.css
+++ b/style4.css
@@ -11,9 +11,87 @@
   min-height: 70vh;
 }
 
+#container #mobile-header {
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: 2fr 4fr 2fr;
+      grid-template-columns: 2fr 4fr 2fr;
+  min-height: 19vh;
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
+}
+
+#container #mobile-header #mobile-logo img {
+  width: 70%;
+}
+
+#container #mobile-header #mobile-spacer h3 {
+  font-size: x-large;
+  font-family: 'Crimson Text', serif;
+}
+
+#container #mobile-header #hamburger-menu #mobile-checkbox {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  opacity: 0;
+  z-index: 5;
+}
+
+#container #mobile-header #hamburger-menu #mobile-checkbox:checked ~ #mobile-header-menu {
+  top: 0;
+  opacity: 1;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+#container #mobile-header #hamburger-menu #hamburger-container {
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 50px;
+  height: 50px;
+  z-index: 4;
+  position: relative;
+}
+
+#container #mobile-header #hamburger-menu #hamburger-container .hamburger-line {
+  width: 30px;
+  height: 4px;
+  background-color: black;
+}
+
+#container #mobile-header #hamburger-menu #mobile-header-menu {
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  position: absolute;
+  width: 100%;
+  background-color: burlywood;
+  display: -ms-grid;
+  display: grid;
+  top: -19vh;
+  opacity: 0;
+  left: 0;
+  min-height: 19vh;
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
+}
+
+#container #mobile-header #hamburger-menu #mobile-header-menu a {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+}
+
 #container #header {
   display: -ms-grid;
   display: grid;
+  display: none;
   -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   width: 100%;
@@ -122,6 +200,9 @@
 }
 
 @media only screen and (min-width: 600px) {
+  #container #mobile-header {
+    display: none;
+  }
   #container #header {
     height: 25vh;
     display: -ms-grid;
@@ -183,18 +264,38 @@
 }
 
 @media only screen and (min-width: 1020px) {
+  #container #mobile-header {
+    display: none;
+  }
   #container #header {
-    height: 20vh;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (minmax(90px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    justify-items: center;
+    width: 100%;
   }
   #container #header h3 {
-    font-size: xx-large;
+    display: none;
   }
   #container #header h3 #pizza-logo {
-    width: 35%;
-    margin-top: 4vh;
+    position: absolute;
+    left: 0;
+    top: 4vh;
+  }
+  #container #header #pizza-logo-two {
+    display: block;
+    width: 30%;
   }
   #container #header a {
-    padding: 11px;
+    font-size: large;
+    color: white;
+    text-decoration: none;
+    background-color: darkred;
+    padding: 1vh;
     -webkit-transition: all 0.25s ease-in-out;
     transition: all 0.25s ease-in-out;
   }
